--- a/DashBoard.css
+++ b/DashBoard.css
@@ -13,15 +13,15 @@
 }
 .BotoesAcesso {
     border: none;
-    margin-left: 100px;
+    margin-left: 400px;
     margin-top: 50px;
     padding: 5px;
     border-radius: 5px;
 }
 .BotoesAcesso2 {
     border: none;
-    margin-left: 100px;
+    margin-left: 25px;
     margin-top: 50px;
-    padding-left: 20px;
+    padding: 0px 25px 0px 25px;
     border-radius: 5px;
 }
