--- a/EsqueciMinhaSenha.css
+++ b/EsqueciMinhaSenha.css
@@ -15,3 +15,13 @@
     margin-right: 150px;
     height: 300px;
 }
+
+.caixaprecisadeajuda {
+    color: white;
+    background-color:rgb(44, 44, 181) ;
+    padding: 40px;
+    text-align: center;
+    margin-left: 200px;
+    margin-right: 200px;
+    border-radius: 20px;
+}
