--- a/Login.css
+++ b/Login.css
@@ -59,6 +59,7 @@ form label {
     color: #000000;
 }
 
+
 form input {
     width: 100%;
     padding: 12px 15px;
@@ -117,4 +118,26 @@ form input:focus {
 }
 #Senha {
     border-radius: 20px;
+}
+.mensagemErro {
+  display: none; 
+  background-color: #333;
+  color: white;
+  padding: 12px;
+  border-radius: 4px;
+  margin-top: 10px;
+  position: relative;
+  font-size: 14px;
+}
+.mensagemErro.show {
+  display: flex; 
+  align-items: center;
+}
+.iconeErro {
+  font-size: 18px;
+  color: orange;
+  margin-right: 8px;
+}
+.input-erro {
+    border: 2px solid #ff3333 !important;
 }
