--- a/styletelacadastro.css
+++ b/styletelacadastro.css
@@ -8,7 +8,7 @@
     padding-bottom: 10px;
     box-shadow: rgb(206, 198, 198);
     font-family: Arial, Helvetica, sans-serif;
-    max-width: ;
+    max-width: 50px ;
 }
 .titulo button {
   font-size: 15px;
