--- a/Cadastro.css
+++ b/Cadastro.css
@@ -8,67 +8,86 @@
     padding-bottom: 10px;
     box-shadow: rgb(206, 198, 198);
     font-family: Arial, Helvetica, sans-serif;
-    max-width: 5000px ;
+    max-width: 5000px;
     transition: box-shadow 0.3s;
 }
+
 .caixa_informacoes:hover {
-    box-shadow: 0 16px 48px rgba(0,0,0,0.25);
- 
+    box-shadow: 0 16px 48px rgba(0, 0, 0, 0.25);
+
 }
+
+@media (max-width: 768px) {
+    body {
+        font-size: 14px;
+    }
+}
+
 .titulo button {
-  font-size: 16px;
-  border: 1px solid #fffafa
+    font-size: 16px;
+    border: 1px solid #fffafa
 }
+
 .caixa_informacoes input:focus {
     border: 2px solid #888;
     outline: none;
-    }
+}
+
 .texto {
     text-align: left;
     margin-bottom: 15px;
     padding-left: 90px;
 }
-.toptop img {  
-    height: 65px;  
-    width: 70px; 
+
+.toptop img {
+    height: 65px;
+    width: 70px;
     border-radius: 10px;
 }
+
 .h1top {
-margin-top: 10px;
-margin-left: 20px;
+    margin-top: 10px;
+    margin-left: 20px;
 }
+
 .toptop {
     display: flex;
     font-size: 20px;
     color: white;
-    font-family: Arial, Helvetica, sans-serif; 
+    font-family: Arial, Helvetica, sans-serif;
     margin-left: 470px;
-    margin-top: 20px  
+    margin-top: 20px
 }
+
 .check {
-    padding-left: 60px;
+    padding-left: 10px;
     display: flex;
     align-items: center;
     margin-bottom: 15px;
     align-items: center;
 }
+
 .check .aceitartermos {
     margin-bottom: 0;
-    margin-right: 8px;
+    margin-left: 10px;
     height: 20px;
 }
+
 .labelace {
     color: #272921;
     margin-bottom: 0;
     margin-right: 8px;
     line-height: 20px;
 }
+
 .caixa_informacoes h1 {
     font-weight: normal;
 }
+
 .caixa_informacoes h4 {
     font-weight: normal;
 }
+
 .caixa_informacoes input {
     border-radius: 5px;
     border: 1px solid #E0E0E0;
@@ -81,22 +100,25 @@ margin-left: 20px;
     margin-bottom: 15px;
     margin-left: 0;
 }
+
 .titulo button {
     font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
-    transition: background 0.3s,color 0.3s ;
+    transition: background 0.3s, color 0.3s;
     padding-top: 8px;
     padding-bottom: 8px;
     border-radius: 10px;
-    
+
 }
+
 .titulo button:hover {
     background: #4e3cf0;
     color: black;
 }
+
 .caixa_informacoes button {
-    padding-left: 200px;
-    padding-right: 200px;
+    padding-left: 150px;
+    padding-right: 150px;
     padding-top: 9px;
     padding-bottom: 9px;
     border-radius: 10px;
@@ -106,53 +128,66 @@ margin-left: 20px;
     font-weight: bold;
     transition: background 0.3s;
 }
+
 .caixa_informacoes button:hover {
-background: #074e8d;
+    background: #074e8d;
 }
+
 .jatem {
     font-size: 14px;
     color: rgb(80, 80, 70);
 }
+
 .alink {
-text-decoration: none;
-color: #074e8d;
-font-weight: bold;
+    text-decoration: none;
+    color: #074e8d;
+    font-weight: bold;
 }
+
 .caixa_informacoes h4 {
     color: rgb(122, 122, 121);
 }
+
 .corpo {
     background-color: #140de9;
 }
+
 .titulo {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 .titulo h1 {
     color: white;
     font-weight: normal;
 }
+
 .titulo button {
     color: white;
     background-color: transparent;
     border: none;
 }
-.nomecompleto{
+
+.nomecompleto {
     background: #f6f7f8;
     margin-bottom: 10px;
 }
+
 .gmail {
     background: #f6f7f8;
     margin-bottom: 10px;
 }
+
 .senha {
     background: #f6f7f8;
     margin-bottom: 10px;
 }
+
 .confirmarsenha {
     background: #f6f7f8;
     margin-bottom: 10px;
 }
+
 .aceitartermos {
     background: #f6f7f8;
     margin-bottom: 10px;
