--- a/DashBoard.css
+++ b/DashBoard.css
@@ -26,6 +26,15 @@
     margin-bottom: 25px;
     padding: 5px;
     border-radius: 5px;
+    font-size: 20px;
+    background-color: #3d38f5;
+    color: white;
+    cursor: pointer;
+    transition: all 2s ease;
+}
+
+.BotoesAcesso:hover {
+    background-color: #080558;
 }
 
 .BotoesAcesso2 {
@@ -35,10 +44,19 @@
     margin-bottom: 25px;
     padding: 0px 25px 0px 25px;
     border-radius: 5px;
+    background-color: white;
+    font-size: 20px;
+    cursor: pointer;
+    transition: all 0.1s ease;
 }
+.BotoesAcesso2:hover {
+    border-bottom: 5px solid #3d38f5;
+}
+
 body {
     background-color: rgba(242, 248, 253, 0.874);
 }
+
 .pagina {
     margin-top: 30px;
     margin-left: 300px;
