--- a/Suporte.css
+++ b/Suporte.css
@@ -4,8 +4,13 @@
     box-sizing: border-box;
 }
 
+body {
+    background: rgb(211, 229, 247);
+    ;
+}
+
 .header {
-    
+    display: flex;
     height: 130px;
     width: 120px;
     margin-left: 250px;
@@ -26,6 +31,15 @@
     margin-bottom: 25px;
     padding: 5px;
     border-radius: 5px;
+    font-size: 20px;
+    background-color: #007be5;
+    color: white;
+    cursor: pointer;
+    transition: all 2s ease;
+}
+
+.BotoesAcesso:hover {
+    background-color: #080558;
 }
 
 .BotoesAcesso2 {
@@ -35,7 +49,74 @@
     margin-bottom: 25px;
     padding: 0px 25px 0px 25px;
     border-radius: 5px;
+    background-color: white;
+    font-size: 20px;
+    cursor: pointer;
+    transition: all 0.1s ease;
 }
+
+.BotoesAcesso2:hover {
+    border-bottom: 5px solid #3d38f5;
+}
+
 body {
-    background-color: rgba(242, 248, 253, 0.874);
+    background-color: rgb(211, 229, 247);
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.centralsuporte {
+    text-align: center;
+    font-size: 25px;
+    display: flex;
+    margin-top:30px ;
+}
+
+.centralsuporte img {
+    height: 70px;
+    border-radius: 55px;
+    margin-left: 700px;
+}
+
+.centralsuporte p {
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
+.ajuda {
+    text-align: center;
+    font-size: 26px;
+    margin-top: 30px;
+    color: rgb(54, 61, 61);
+}
+.chat img {
+    height: 70px;
+    margin-top: 10px;
+}
+.chat button {
+    background-color: #007be5;
+    width: 300px;
+    border-radius: 10px;
+    height: 40px;
+    margin-top: 20px;
+    font-size: 20px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    border: none;
+    
+}
+.chat {
+    background-color: white;
+    height: 300px;
+    width: 600px;
+    margin-left: 30px;
+    margin-top: 20px;
+    border-radius: 20px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+}
+
+.chat p {
+    margin-top: 20px;
+
 }
