--- a/Suporte.css
+++ b/Suporte.css
@@ -15,14 +15,30 @@ body {
     width: 120px;
     margin-left: 250px;
 }
+.BotoesAcesso3 {
+    border: none;
+    margin-left: 25px;
+    margin-top: 50px;
+    margin-bottom: 25px;
+    padding: 0px 25px 0px 25px;
+    border-radius: 5px;
+    background-color: #007be5;
+    font-size: 20px;
+    cursor: pointer;
+    transition: all 2s ease;
+}
 
+.BotoesAcesso3:hover {
+    background-color: #1914a1;
+}
 .head {
     display: flex;
-    position: sticky;
+    position: fixed;
     top: 0;
+    width: 1800px;
     z-index: 1000;
     background-color: white;
-    box-shadow: 0 16px 48px rgba(0,0,0,0.18);  
+    box-shadow: 0 16px 48px rgba(0, 0, 0, 0.18);
 }
 
 .BotoesAcesso {
@@ -31,16 +47,15 @@ body {
     margin-top: 50px;
     margin-bottom: 25px;
     padding: 5px;
+    background-color: white;
     border-radius: 5px;
     font-size: 20px;
-    background-color: #007be5;
-    color: white;
     cursor: pointer;
-    transition: all 2s ease;
+    transition: all 0.1s ease;
 }
 
 .BotoesAcesso:hover {
-    background-color: #080558;
+    border-bottom: 5px solid #3d38f5;
 }
 
 .BotoesAcesso2 {
@@ -88,7 +103,7 @@ body {
 .ajuda {
     text-align: center;
     font-size: 26px;
-    margin-top: 30px;
+    margin-top: 70px;
     color: rgb(54, 61, 61);
 }
 .chat img {
@@ -111,7 +126,8 @@ body {
     background-color: white;
     height: 300px;
     width: 600px;
-    margin-left: 30px;
+    margin-left: 15px;
+    margin-right: 15px;
     margin-top: 20px;
     border-radius: 20px;
     text-align: center;
