--- a/equipe.css
+++ b/equipe.css
@@ -160,6 +160,7 @@ main h3 {
     padding: 0px 25px 0px 25px;
     border-radius: 5px;
     background-color: #007be5;
+    color: white;
     font-size: 20px;
     cursor: pointer;
     transition: all 2s ease;
