--- a/DashBoard.css
+++ b/DashBoard.css
@@ -54,7 +54,7 @@
 }
 
 body {
-    background-color: rgba(242, 248, 253, 0.874);
+    background-color: #e7e9ff(242, 248, 253, 0.874);
 }
 
 .pagina {
