--- a/Suporte.css
+++ b/Suporte.css
@@ -165,7 +165,7 @@ body {
 }
 .divbackgroundperguntas {
 background-color: white;
-height: 600px;
+height: 1250px;
 width: 1040px;
 border-radius: 20px;
 margin-left: 50px;
@@ -230,32 +230,27 @@ padding-top: 20px;
 }
 .contasuporte {
     display: flex;
-    margin-top: 25px;
+    margin-top: 35px;
 }
 .contasuporte img {
     height: 28px;
 }
 .contasuporte p {
-    margin-top: 5px;
+    margin-top: 3px;
     margin-left: 10px;
-    font-size: 20px;
+    font-size: 18px;
 }
 .divcontasuporte {
-    display: flex;
-    
-    
+margin-left: 30px;
+font-size: 20px;
+margin-top: 20px;
 }
-.divcontasuporte p {
     
-}
-
-.primeiralinhasp {
-    width: 4px;
-    height: 100px;
-    margin-left: 40px;
-    margin-top: 10px;
-    background-color:rgb(210, 210, 210);
-    border: none;
+    
+.texto2sp {
+    margin-top: 19px;
+    color: rgb(110, 110, 110);
+    font-size: 16px;
 }
 
 .contatodiretodiv {
@@ -274,4 +269,7 @@ padding-top: 20px;
     border-radius: 20px;
     height: 300px;
     width: 535px;
+}
+.linhadivisoria {
+    margin-top: 25px;
 }
