--- a/perfil.css
+++ b/perfil.css
@@ -23,10 +23,15 @@
 .head h1 {
     font-family: Arial, Helvetica, sans-serif;
     margin-top: 40px;
+    font-weight: bold;
 }
-
-body {
+main {
     background-color: rgb(211, 229, 247);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    padding-left: 60px;
+    font-size: larger;
+    margin-top: 20px;
 }
 
 .BotoesAcesso {
@@ -100,7 +105,7 @@ body {
     border-radius: 15px;
     border: none;
     height: 40px;
-    width: 190px;
+    width: 210px;
     text-align: center;
     border: 1px solid #aea9a9
 }
@@ -117,11 +122,17 @@ body {
 .comecinho h1 {
     margin-top: 10px;
     font-size: 45px;
-    font-weight: normal;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .comecinho p {
     margin-top: 10px;
     font-size: 20px;
-
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+}
+#btnEditarNome {
+    font-size: x-large;
+    height: 60px;
 }
