--- a/Suporte.css
+++ b/Suporte.css
@@ -165,7 +165,7 @@ body {
 }
 .divbackgroundperguntas {
 background-color: white;
-height: 1280px;
+height: 1250px;
 width: 1040px;
 border-radius: 20px;
 margin-left: 50px;
@@ -240,17 +240,19 @@ padding-top: 20px;
     margin-left: 10px;
     font-size: 18px;
 }
+
 .divcontasuporte {
 margin-left: 30px;
 font-size: 20px;
 margin-top: 20px;
 }
     
-    
+
 .texto2sp {
     margin-top: 19px;
     color: rgb(110, 110, 110);
     font-size: 16px;
+    padding-right: 40px;
 }
 
 .contatodiretodiv {
@@ -259,17 +261,85 @@ margin-top: 20px;
     padding-left: 20px;
     background-color: white;
     border-radius: 20px;
-    height: 300px;
+    height: 740px;
     width: 500px;
+    padding-left: 30px;
+    padding-top: 24px;
 }
-
+.contatodiretodiv button {
+    background-color: #007be5;
+    width:400px;
+    margin-left: 30px;
+    border-radius: 10px;
+    height: 50px;
+    margin-top: 20px;
+    font-size: 20px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    border: none;
+}
 .statusmensagemdiv {
-    margin-top: 80px;
+    margin-top: 20px;
     background-color: white;
     border-radius: 20px;
     height: 300px;
-    width: 535px;
+    width: 520px;
+    padding-left: 30px;
+    padding-top: 24px;
+    margin-left: 35px;
 }
 .linhadivisoria {
     margin-top: 25px;
+    width: 980px;
+}
+.contatodireto {
+    display: flex;
+}
+.contatodireto img {
+    height: 30px;
+}
+.contatodireto p {
+    margin-top: 5px;
+    font-size: 20px;
+    margin-left: 10px;
+}
+.mensagemcontatodiv {
+    margin-top: 13px;
+    color: rgb(167, 167, 167);
+    padding-right: 40px;
+    font-size: 20px;
+    font-family: "Nunito Sans", sans-serif;;
+}
+.nomecontatodireto {
+    font-size:19px;
+    margin-top: 20px;
+    color: #474747;
+}
+
+.divcontatodireto input {
+    border-radius:10px;
+    border-color: rgb(54, 61, 61);
+    padding: 13px;
+    width: 450px;
+    border: 1px solid #b7b7b7;
+    font-size: 18px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+.mensagemstatus {
+    color: #919191;
+    font-size: 18px;
+    margin-top: 35px;
+}   
+.linhastatus{
+    margin-top: 20px;
+    width: 440px;
+    height: 2px;
+    background-color: rgb(161, 161, 161);
+}
+.atualizaçãostatus {
+    color: #919191;
+    font-size: 16px;
+    margin-top: 20px;
+    text-align: center;
 }
